--- a/css/media.css
+++ b/css/media.css
@@ -1,19 +1,77 @@
+@media(max-width: 1250px){
+    benefits__images{
+        width: 40%;
+    }
+}
+@media(max-width: 1140px){
+    .rent__inner{
+        flex-wrap: wrap;
+        justify-content: space-around;
+    }
+    .rent__content{
+        width: 100%;
+        margin-bottom: 30px;
+    }
+}
+@media(max-width: 1000px){
+    .top__heading{
+        display: block;
+    }
+    .top__content{
+        width: 100%;
+        padding-top: 30px;
+    }
+    .top__slider{
+        width: 100%;
+    }
+    .top__bottom{
+    display: block;
+    }
+    .top__link{
+        padding-right: 0;
+        padding-top: 50px;
+        text-align: center;
+    }
+    .top__items{
+        width: 100%;
+    }
+    .benefits__items{
+        flex-wrap: wrap;
+        justify-content: space-around;
+    }
+    .benefits__content{
+        width: 100%;
+        margin-top: 30px;
+    }
+    .benefits__text + .benefits__text{
+        width: 100%;
+    }
+    .footer .menu{
+        display: none;
+    }
+}
 @media(max-width: 860px){
+    .menu{
+        order: 1;
+    }
     .menu__list{
         display: block;
         position: absolute;
         top: 100px;
         left: 0;
-        right: 0;
         background-color: #332208;
+        right: 0;
         text-align: center;
         padding: 20px 0;
-        transform: translateY(-500px);
+        /* забрати меню для сторінки для дж с */
+        transform: translateY(-500);
+        transition: all .5s;
     }
     .menu__list.menu__list--active{
+        /* повернути меню на сторінку */
         transform: translateY(0);
-
     }
+
     .menu__list-link{
         padding: 20px 0;
         display: block;
@@ -25,21 +83,101 @@
         height: 24px;
         outline: none;
         border: none;
-        background-color: transparent;
         border-top: 2px solid #fefefe;
         border-bottom: 2px solid #fefefe;
+        background-color: transparent;
         position: relative;
     }
     .menu__btn::before{
-        content:'';
+        content: "";
         position: absolute;
         width: 35px;
         height: 2px;
-        background-color: #fefefe;
         left: 0;
         top: 9px;
+        background-color: #fefefe;
     }
-    .menu{
-        order: 1;
+    .rent__item{
+        margin: 30px;
+    }
+    .feedback__images{
+        display: none;
+    }
+.footer,
+.feedback,
+.reviews,
+.benefits,
+.rent{
+    padding: 50px 0;
+    }
+}
+@media(max-width: 650px){
+    .rent__item{
+        width: 100%;
+        min-height: 245px;
+    }
+    .rent__item-title{
+        margin-bottom: 20px;
+    }
+    .rent__content{
+        text-align: center;
+    }
+}
+@media(max-width: 525px){
+    .top__items{
+        flex-wrap: wrap;
+    }
+    .top__items{
+        margin: 20px;
+        }
+        .top__slider-text{
+            padding-top: 0;
+    }
+    .benefits__images{
+        width: 70%;
+    }
+    .benefits__list-item{
+        margin-right: 0;
+        text-align: left;
+        padding-right: 0;
+        padding-left: 26px;
+    }
+    .benefits__list-item::after{
+        right: auto;left: 0;
+    }
+}
+@media(max-width: 450px){
+    .footer__top{
+        flex-direction: column;
+        align-items: center;
+    }
+    .footer .phone{
+        margin-top: 30px;
+        display: inline-block;
+    }
+}
+@media(max-width: 410px){
+    .top__item{
+        width: 100%;
+    }
+    .top__links{
+        text-align: center;
+    }
+    .top__link{
+        margin: 10px 15px;
+        display: inline-block;
+    }
+    .top__link + .top__link{
+        margin-left: 0;
+    }
+    .top__slider-text{
+        text-align: right;
+    }
+    .top__slider-text span{
+        display: block;
+        margin: 10px 0;
+    }
+    .rent__item{
+        margin: 30px 0;
     }
 }
