--- a/Головна.css
+++ b/Головна.css
@@ -1425,7 +1425,7 @@
     min-height: 222px;
   }
 } .u-section-7 {
-  background-image: linear-gradient(0deg, rgba(0,0,0,0.45), rgba(0,0,0,0.45)), url("images/xc-min.jpg");
+  background-image: linear-gradient(0deg, rgba(0,0,0,0.45), rgba(0,0,0,0.45)), url("images/садиба_музей_полковника_коновальця.png");
   background-position: 50% 50%;
 }
 
