--- a/nicepage.css
+++ b/nicepage.css
@@ -34986,27 +34986,28 @@ a.u-link.u-text-hover-grey-90:hover {
 }
 @media (max-width: 991px) {
   .u-header .u-btn-1 {
-    margin-right: 0;
+    margin-top: -55px;
     margin-left: auto;
   }
 
   .u-header .u-menu-1 {
-    margin-bottom: 41px;
+    margin-top: -33px;
+    margin-bottom: 45px;
   }
 }
 @media (max-width: 767px) {
   .u-header .u-sheet-1 {
-    min-height: 135px;
+    min-height: 121px;
   }
 
   .u-header .u-btn-1 {
+    align-self: center;
     margin-right: 161px;
   }
 
   .u-header .u-menu-1 {
-    margin-top: 20px;
-    margin-right: 161px;
-    margin-bottom: 41px;
+    margin-top: -29px;
+    margin-bottom: 45px;
   }
 }
 @media (max-width: 575px) {
@@ -35015,12 +35016,12 @@ a.u-link.u-text-hover-grey-90:hover {
   }
 
   .u-header .u-btn-1 {
-    margin-right: 56px;
+    margin-right: 59px;
+    font-weight: normal;
   }
 
   .u-header .u-menu-1 {
-    margin-right: 0;
-    margin-bottom: 41px;
+    margin-top: -29px;
   }
 }
  .u-footer {
